# Violence_Detection

./: .gitignore  pyproject.toml
src/data/: dataset.py  loader.py  train_test_split.py  transform.py
src/models/: cnn.py  evaluation.py  train.py
src/pipelines/: model_training.py
