[project]
name = "violence-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]",
    "ipykernel>=7.1.0",
    "matplotlib>=3.8",
    "opencv-python",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "wandb>=0.23.1",
    "tqdm>=4.67.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
